--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title>Le territoire d'action de la Banque Alimentaire d'Eure et Loir</title>
     </head>
     <body>
         <div id="map">
@@ -51,7 +51,7 @@
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[47.877506550094836,0.2646403771746108],[49.03185758293074,3.373262561985443]]);
+        }).fitBounds([[47.877506550094836,0.33716745614543053],[49.03185758293073,3.3007354830146203]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -1015,28 +1015,22 @@
         function pop_BACentreValdeLoire_16(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <th scope="row">Nom</th>\
-                        <td>' + (feature.properties['Nom'] !== null ? autolinker.link(feature.properties['Nom'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Nom</strong><br />' + (feature.properties['Nom'] !== null ? autolinker.link(feature.properties['Nom'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <th scope="row">Adresse</th>\
-                        <td>' + (feature.properties['Adresse'] !== null ? autolinker.link(feature.properties['Adresse'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Adresse</strong><br />' + (feature.properties['Adresse'] !== null ? autolinker.link(feature.properties['Adresse'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <th scope="row">Ville</th>\
-                        <td>' + (feature.properties['Ville'] !== null ? autolinker.link(feature.properties['Ville'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['Ville'] !== null ? autolinker.link(feature.properties['Ville'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <th scope="row">CP</th>\
-                        <td>' + (feature.properties['CP'] !== null ? autolinker.link(feature.properties['CP'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['CP'] !== null ? autolinker.link(feature.properties['CP'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <th scope="row">Tel</th>\
-                        <td>' + (feature.properties['Tel'] !== null ? autolinker.link(feature.properties['Tel'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Tel</strong><br />' + (feature.properties['Tel'] !== null ? autolinker.link(feature.properties['Tel'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <th scope="row">Site</th>\
-                        <td>' + (feature.properties['Site'] !== null ? autolinker.link(feature.properties['Site'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Site</strong><br />' + (feature.properties['Site'] !== null ? autolinker.link(feature.properties['Site'].toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
@@ -1145,6 +1139,16 @@
         });
         bounds_group.addLayer(layer_RgionCentreValdeLoire_18);
         map.addLayer(layer_RgionCentreValdeLoire_18);
+            var title = new L.Control();
+            title.onAdd = function (map) {
+                this._div = L.DomUtil.create('div', 'info');
+                this.update();
+                return this._div;
+            };
+            title.update = function () {
+                this._div.innerHTML = '<h2>Le territoire d\'action de la Banque Alimentaire d\'Eure et Loir</h2>';
+            };
+            title.addTo(map);
         var baseMaps = {};
         L.control.layers(baseMaps,{'<img src="legend/RgionCentreValdeLoire_18.png" /> Région Centre Val de Loire': layer_RgionCentreValdeLoire_18,'<img src="legend/EureetLoir_17.png" /> Eure et Loir': layer_EureetLoir_17,'<img src="legend/BACentreValdeLoire_16.png" /> BA (Centre Val de Loire)': layer_BACentreValdeLoire_16,'<img src="legend/Epiceriessocialespartenaires28_15.png" /> Epiceries sociales partenaires (28)': layer_Epiceriessocialespartenaires28_15,'<img src="legend/CCASpartenaires28_14.png" /> CCAS partenaires (28)': layer_CCASpartenaires28_14,'<img src="legend/Associationspartenaires28_13.png" /> Associations partenaires (28)': layer_Associationspartenaires28_13,'<img src="legend/SecoursPopulaire28_12.png" /> Secours Populaire (28)': layer_SecoursPopulaire28_12,'<img src="legend/RestosduCoeur28_11.png" /> Restos du Coeur (28)': layer_RestosduCoeur28_11,'<img src="legend/SSVP28_10.png" /> SSVP (28)': layer_SSVP28_10,'<img src="legend/SecoursCatholique28_9.png" /> Secours Catholique (28)': layer_SecoursCatholique28_9,'<img src="legend/CommunesavecaidealimentaireEureetLoir_8.png" /> Communes avec aide alimentaire (Eure et Loir)': layer_CommunesavecaidealimentaireEureetLoir_8,'<img src="legend/ZonesblanchesdelaidealimentaireEureetLoir_7.png" /> Zones blanches de l\'aide alimentaire (Eure et Loir)': layer_ZonesblanchesdelaidealimentaireEureetLoir_7,'<img src="legend/ZRR_6.png" /> ZRR ': layer_ZRR_6,'Médiane du niveau de vie <br /><table><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_5_15430206480.png" /></td><td>15430 - 20648</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_5_20648217801.png" /></td><td>20648 - 21780</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_5_21780228642.png" /></td><td>21780 - 22864</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_5_22864241443.png" /></td><td>22864 - 24144</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_5_24144334404.png" /></td><td>24144 - 33440</td></tr></table>': layer_Mdianeduniveaudevie_5,'Taux de chômage <br /><table><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_4_0760.png" /></td><td>0 - 7,6</td></tr><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_4_76971.png" /></td><td>7,6 - 9,7</td></tr><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_4_971242.png" /></td><td>9,7 - 12,4</td></tr><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_4_1244063.png" /></td><td>12,4 - 40,6</td></tr></table>': layer_Tauxdechmage_4,'PAT 28<br /><table><tr><td style="text-align: center;"><img src="legend/PAT28_3_ChartresMétropole0.png" /></td><td>Chartres Métropole</td></tr><tr><td style="text-align: center;"><img src="legend/PAT28_3_CommunautésdAgglomérationdupaysdeDreux1.png" /></td><td>Communautés d\'Agglomération du pays de Dreux</td></tr><tr><td style="text-align: center;"><img src="legend/PAT28_3_CommunautésdecommunesCoeurdeBeauce2.png" /></td><td>Communautés de communes Coeur de Beauce</td></tr></table>': layer_PAT28_3,'<img src="legend/CommunesEureetLoir_2.png" /> Communes (Eure et Loir)': layer_CommunesEureetLoir_2,'<img src="legend/EPCI28_1.png" /> EPCI 28': layer_EPCI28_1,"Google Road": layer_GoogleRoad_0,},{collapsed:false}).addTo(map);
         setBounds();
